31

* Fix stop button icon. (marco)

30

* Add macedonian translation.

29

* #2718: Make the library the browser homepage. (marco)

28

* #1996: Rename to "Browse". (marco)

27

* Make it startup again. (marco)

26

* Add brazilian translation. (DiegoZacarao)

25

* Arabian translation