@@ -1,3 +1,5 @@
+* #2268 Allow removing downloads from the clipboard while in progress. (tomeu)
+
 31
 
 * Fix stop button icon. (marco)
